@@ -10,9 +10,14 @@ EXPOSE 8080
 
 RUN mkdir /app
 
-COPY  --from=build /home/gradle/src/build/libs/spring-music-1.0.jar /app/spring-music.jar
+#RUN ls ~/src/build/libs/
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-DJava.security.egd=file:/dev.urandom", "-jar","/app/spring-music.jar"]
+RUN sleep 1m
+
+
+COPY  --from=build /home/gradle/src/build/libs/src-1.0.jar /app/spring-music.jar
+
+ENTRYPOINT ["java", "-DJava.security.egd=file:/dev.urandom", "-jar","/app/spring-music.jar"]
 
 #FROM openjdk:11
 #VOLUME /tmp
